--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
 	"name": "template",
 	"version": "1.0.0",
-	"description": "template for mern/pern projects",
+	"description": "template for pern projects",
 	"author": "Kyle McKell <46072760+KyleMcKell@users.noreply.github.com>",
-	"license": "MIT"
+	"license": "MIT",
+	"scripts": {
+		"client-install": "yarn --cwd client",
+		"server-install": "yarn --cwd server",
+		"setup": "yarn && yarn server-install && yarn client-install",
+		"server": "yarn --cwd server start",
+		"client": "yarn --cwd client start",
+		"dev": "concurrently \"yarn server\" \"yarn client\""
+	},
+	"dependencies": {
+		"concurrently": "^6.0.2"
+	}
 }
