--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "client",
 	"version": "0.1.0",
+	"license": "MIT",
 	"dependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -17,23 +18,5 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
 	}
 }
