--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
 		"@types/express": "^4.17.11",
 		"@types/jsonwebtoken": "^8.5.1",
 		"@types/pg": "^7.14.11",
+		"prisma": "^2.21.2",
 		"typescript": "^4.2.4"
 	}
 }
