--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
 		"start": "nodemon src/server.ts"
 	},
 	"dependencies": {
+		"@prisma/client": "^2.21.2",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
