--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1",
-		"pg": "^8.6.0"
+		"jsonwebtoken": "^8.5.1"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
@@ -22,7 +21,6 @@
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.11",
 		"@types/jsonwebtoken": "^8.5.1",
-		"@types/pg": "^7.14.11",
 		"prisma": "^2.21.2",
 		"typescript": "^4.2.4"
 	}
