--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
