--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
 	"main": "src/server.ts",
 	"license": "MIT",
 	"scripts": {
-		"build": "rm -rf build/ && tsc",
-		"start": "nodemon src/server.ts"
+		"build": "rm -rf build/ && prettier --write src/ && tsc",
+		"dev": "nodemon src/server.ts",
+		"start": "ts-node src/server.ts"
 	},
 	"dependencies": {
 		"@prisma/client": "^2.21.2",
@@ -13,15 +14,15 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1"
-	},
-	"devDependencies": {
+		"jsonwebtoken": "^8.5.1",
+		"nodemon": "^2.0.7",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.4",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.10",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.11",
 		"@types/jsonwebtoken": "^8.5.1",
-		"prisma": "^2.21.2",
-		"typescript": "^4.2.4"
+		"prisma": "^2.21.2"
 	}
 }
