--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"heroku-prebuild": "yarn server-install && yarn server-build"
 	},
 	"dependencies": {
-		"concurrently": "^6.0.2"
+		"concurrently": "^6.0.2",
+		"prettier": "^2.3.0"
 	}
 }
