--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,19 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^2.21.2",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/cors": "^2.8.10",
+		"@types/dotenv": "^8.2.0",
+		"@types/express": "^4.17.11",
+		"@types/jsonwebtoken": "^8.5.1",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"nodemon": "^2.0.7",
+		"prisma": "^2.21.2",
 		"ts-node": "^9.1.1",
-		"typescript": "^4.2.4",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/cors": "^2.8.10",
-		"@types/dotenv": "^8.2.0",
-		"@types/express": "^4.17.11",
-		"@types/jsonwebtoken": "^8.5.1",
-		"prisma": "^2.21.2"
+		"typescript": "^4.2.4"
 	}
 }
