--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
 	"main": "src/server.ts",
 	"license": "MIT",
 	"scripts": {
-		"build": "rm -rf build/ && prettier --write src/ && tsc",
+		"build": "rm -rf build/ && tsc",
 		"dev": "nodemon src/server.ts",
 		"start": "ts-node src/server.ts"
 	},
