--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "rm -rf build/ && tsc",
 		"dev": "nodemon src/server.ts",
-		"start": "ts-node src/server.ts"
+		"start": "node build/server.js"
 	},
 	"dependencies": {
 		"@prisma/client": "^2.21.2",
@@ -22,7 +22,6 @@
 		"jsonwebtoken": "^8.5.1",
 		"nodemon": "^2.0.7",
 		"prisma": "^2.21.2",
-		"ts-node": "^9.1.1",
 		"typescript": "^4.2.4"
 	}
 }
